--- a/SS14.Shared/SS14.Shared.csproj
+++ b/SS14.Shared/SS14.Shared.csproj
@@ -192,7 +192,7 @@
     <Compile Include="Map\GridId.cs" />
     <Compile Include="Map\Coordinates.cs" />
     <Compile Include="Map\MapId.cs" />
-    <Compile Include="Map\DefaultTileDefinitions.cs" />
+    <Compile Include="Map\PrototypeTileDefinition.cs" />
     <Compile Include="Map\MapManager.cs" />
     <Compile Include="Map\MapManager.Network.cs" />
     <Compile Include="Map\Tile.cs" />
